--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,18 +7,17 @@
 }
 
 .about p {
-  text-align: justify;
+  text-align: left;
   min-width: 250px;
   max-width: 500px;
 }
 
-.about a{
-    border:1px solid grey;
-    padding:.5rem 2rem;
-    text-decoration: none;
-    color:white;
-    background-color: rgb(66, 66, 145);
-    margin:1rem 0;
-    border-radius: 5px;
+.about a {
+  border: 1px solid grey;
+  padding: .5rem 2rem;
+  text-decoration: none;
+  color: white;
+  background-color: rgb(66, 66, 145);
+  margin: 1rem 0;
+  border-radius: 5px;
 }
-
