--- a/src/components/projects/OtherProjects/otherprojects.css
+++ b/src/components/projects/OtherProjects/otherprojects.css
@@ -26,11 +26,12 @@
 .project-card h3 {
   text-align: center;
 }
+
 .project-card h3 a {
   color: #000;
 }
 
 .project-card p {
-  text-align: justify;
+  text-align: center;
   margin: 1.5rem;
 }
