--- a/src/components/projects/OtherProjects/otherprojects.css
+++ b/src/components/projects/OtherProjects/otherprojects.css
@@ -1,3 +1,9 @@
+.other_projects h2 {
+  font-size: 35px;
+  text-transform: uppercase;
+  color: rgb(34, 34, 34);
+}
+
 .other-projects-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -9,9 +15,13 @@
   width: 25rem;
   background-color: var(--cardBackground);
   margin: 2rem;
-  padding: 3rem;
+  padding: 1rem;
   border-radius: 15px;
   box-shadow: var(--shadow);
+}
+
+.project-card ul {
+  padding: 1rem;
 }
 
 .project-card ul li {
