--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 body {
   background-color: var(--sectionColor);
   overflow-x: hidden;
+  margin: 0 auto;
 }
 
 
@@ -53,6 +54,8 @@ section {
 
 main {
   overflow: hidden;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 section h2 {
