--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -12,13 +12,15 @@
 }
 
 .skill-card {
-  margin: 10px;
-  min-width: 250px;
+  margin: 2rem 2rem 1rem 2rem;
+  max-width: 250px;
+  width: 100%;
   text-align: center;
-  padding: 20px;
+  padding: 1rem;
   border-radius: 20px;
-  box-shadow:var(--shadow);
+  box-shadow: var(--shadow);
 }
+
 .skill-card ul {
   list-style: none;
   font-size: 1.08rem;
@@ -29,7 +31,7 @@
   opacity: 0.7;
   padding: 15px;
   border-radius: 25%;
-  box-shadow:var(--shadow);
+  box-shadow: var(--shadow);
   margin-bottom: 1rem;
 }
 
